fix z-index

--- a/website/style.css
+++ b/website/style.css
@@ -39,6 +39,7 @@
         box-shadow: 0 1px 3px 0 rgba(0, 0, 0, 0.15);
         position: sticky;
         top: 0;
+        z-index: 1;
     }
 
     .logo {
@@ -349,7 +350,7 @@
         position: fixed;
         bottom: 20px;
         right: 20px;
-        z-index: 100;
+        z-index: 2;
         display: flex;
         flex-direction: column;
         gap: 10px;
